# GameAnnouncer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.template  Dockerfile  Makefile  README.md  clear_schedules.py  console.py  main.py  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_27_1625-c81c03cadde7_create_games_table.py  2025_10_07_2049-008606da9cc5_add_title_and_content_fields_to_.py  2025_10_09_1856-d8bb87b6d199_add_image_url_to_games_and_announcements.py  2025_10_17_1847-91d0b982f45a_create_users_table.py  2025_10_26_1453-4ba84043d320_add_many_to_many_relationship_to_user_.py  2025_11_21_2049-36d3e40a5f74_add_category_column_to_game.py  2025_11_22_0859-0462102118a4_create_registration_request_table.py  2025_12_10_1235-d7c5f10fd503_add_uniquennes_to_game_name.py  2026_01_10_0423-c6e0e0bb5c35_add_dates_for_announcements.py  2026_01_10_1107-18803b3a5ba0_update_registration_status_enum.py  2026_01_12_1515-c661da934b30_add_status_and_max_participants_to_.py  2026_01_19_1444-d3e80043f1de_add_registration_architecture.py  2026_01_20_1627-982afec0add7_add_end_at_to_announcements.py  2026_02_04_1401-c5a29aade580_merge_registration_architecture_and_end_.py  2026_02_12_0325-34d3c70e8734_remove_key_from_form_fields_table.py  2026_02_13_0933-c0c1dea4f4f2_update_and_extend_announcement_.py  2026_02_13_1335-ef13ddc87c09_add_format_column_for_announcement_table.py  2026_02_14_0522-082de460c6a5_add_bracket_size_and_other_fields_to_.py  2026_02_15_0652-b6210d7f68b5_add_matches_table.py  2026_03_06_0705-47c8035142dd_add_placement_to_announcement_.py  2026_03_06_1640-ea2228eec1c2_add_partial_unique_index_active_.py  2026_04_08_1612-d086e319d9c3_add_new_avatar_fields_for_users.py
backend/api/: __init__.py  auth.py
backend/api/v1/: __init__.py  announcements.py  (+4 more)
backend/core/: auth.py  config.py  db.py  deps.py  initializers.py  logger.py  user_manager.py  users.py  utils.py
backend/domains/: __init__.py
backend/enums/: __init__.py  announcement_format.py  announcement_status.py  announcement_trigger.py  form_field_type.py  match_status.py  registration_status.py  registration_trigger.py  seed_method.py
backend/exceptions/: __init__.py  api_responses.py  app_exception.py  exception_handler.py  handlers.py
backend/mailers/: __init__.py  base_mailer.py  user_mailer.py
backend/models/: __init__.py  announcement.py  announcement_participant.py  base.py  form_field.py  form_field_response.py  game.py  match.py  registration_form.py  registration_request.py  user.py
backend/modules/: __init__.py
backend/operations/: __init__.py
backend/schemas/: announcement.py  announcement_participant.py  base.py  form_field.py  form_field_response.py  game.py  registration_form.py  registration_request.py  user.py
backend/searches/: announcement_search.py  base_search.py  game_search.py
backend/services/: authorize_action_service.py  avatar_uploader.py  create_announcement_service.py  create_registration_request_service.py  email_service.py  permissions_service.py  upsert_registration_form_service.py
backend/tasks/: __init__.py  announcement_tasks.py  broker.py  email_tasks.py  registration_request_tasks.py  scheduler.py
backend/tests/: conftest.py  factory_fixtures.py  test_console.py
(+859 files in other folders)
