[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "ipython>=9.6.0",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "rich>=14.2.0",
    "ruff>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "taskiq>=0.12.1",
    "taskiq-fastapi>=0.4.0",
    "taskiq-redis>=1.2.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipython>=9.6.0",
    "nest-asyncio>=1.6.0",
]
