[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosmtplib>=5.0.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "factory-boy>=3.3.3",
    "fastapi>=0.117.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "httpx>=0.28.1",
    "ipython>=9.6.0",
    "mjml>=0.11.1",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-factoryboy>=2.8.1",
    "python-multipart>=0.0.20",
    "redis>=7.0.1",
    "rich>=14.2.0",
    "ruff>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "taskiq>=0.12.1",
    "taskiq-fastapi>=0.4.0",
    "taskiq-redis>=1.2.0",
    "testcontainers>=4.13.3",
    "uvicorn[standard]>=0.37.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers..*",
    "ignore::DeprecationWarning:testcontainers",
    "ignore::pytest.PytestConfigWarning",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.28.1",
    "ipython>=9.6.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
    "psycopg[binary]>=3.3.2",
    "testcontainers>=4.13.3",
    "factory-boy>=3.3.3",
    "pytest-factoryboy>=2.8.1",
]
